--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Records controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.records {
+	display: block;
+}
+.record {
+	display: inline-block;
+	border-radius: 6px;
+	padding: 20px;
+	margin: 20px;
+	background-color: white;
+}
