completed form functionality

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,10 @@
 body {
 	background-color: #d2d2d2;
 }
+a {
+	text-decoration: none;
+	&:hover {
+		text-decoration: none;
+		background: transparent;
+	}
+}
