--- a/app/views/records/new.html.haml
+++ b/app/views/records/new.html.haml
@@ -1,3 +1,5 @@
 %h1 New Record
-= render 'form', record: @record
+%hr
+=react_component "RecordForm", props: {recordInputs: @available_drops}, prerender: false
+%hr
 = link_to 'Back', records_path
